# docker-wks

./: .dockerignore  .gitignore  README.md  app.py  dockerfile  key pair test.pem  pyproject.toml
postgresnpgadmin4/: docker-compose.yaml
